--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 .wrapper {
     width: 90%;
     font-size: 16px;
-    max-width: 43.753em;
+    max-width: 1280px;
     margin: 1em auto;
 }
 
@@ -48,14 +48,18 @@ body {
 
 .container input {
     display: block;
-    width: 100%;
-    padding: 0.6em 0.3em;
+    width: 95%;
+    /*padding: 0.6em 0.3em;*/
+    padding: 15px;
+    font-size: 14px;
     border: 1px solid #d0d0d0;
-    border-radius: 0.3em;
+    border-radius: 8px;
     color: #414a67;
     outline: none;
     font-weight: 400;
     margin-bottom: 0.6em;
+    margin-top: 0.6em;
+    text-decoration: none;
 }
 
 .container input:focus {
@@ -67,6 +71,9 @@ body {
     padding: 1.25em 0.9em;
     border-radius: 0.3em;
     box-shadow: 0 0.6em 1.2em rgba(28, 0, 80, 0.06);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .output-container {
@@ -97,8 +104,10 @@ body {
     border: none;
     outline: none;
     color: #fff;
-    padding: 0.6em 1.2em;
-    border-radius: 0.3em;
+    /*padding: 0.6em 1.2em;*/
+    padding: 15px;
+    width: 50%;
+    border-radius: 8px;
     cursor: pointer;
 }
 
